SERVER-3561: validation to avoid chunksize 0